--- a/package.json
+++ b/package.json
@@ -8,13 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^3.4.3",
+    "@mantine/hooks": "^3.4.3",
+    "@mantine/next": "^3.4.3",
+    "@monaco-editor/react": "^4.3.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^7.1.1",
+    "react-syntax-highlighter": "^15.4.5",
+    "rehype-highlight": "^5.0.1",
+    "rehype-katex": "^6.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.4"
