--- a/package.json
+++ b/package.json
@@ -17,17 +17,21 @@
     "react-dom": "17.0.2",
     "react-markdown": "^7.1.1",
     "react-syntax-highlighter": "^15.4.5",
-    "rehype-highlight": "^5.0.1",
     "rehype-katex": "^6.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.0",
     "@types/node": "17.0.4",
+    "@types/prismjs": "^1.16.6",
     "@types/react": "17.0.38",
     "@types/react-syntax-highlighter": "^13.5.2",
+    "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.2.15",
+    "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
 }
