--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/next": "^3.4.3",
     "@monaco-editor/react": "^4.3.1",
     "next": "12.0.7",
+    "next-auth": "^4.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^7.1.1",
