--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/hooks": "^3.4.3",
     "@mantine/next": "^3.4.3",
     "@monaco-editor/react": "^4.3.1",
+    "@tailwindcss/line-clamp": "^0.3.0",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
