--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.3.1",
     "@tailwindcss/line-clamp": "^0.3.0",
-    "next": "12.0.7",
+    "next": "^12.1.5",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
